src/ExpParser.cpp

    #include <iostream>
    #include <iterator>
    #include <vector>
    #include <stdlib.h>
    
    #define RED 31
    #define YELLOW 33
    
    using namespace std;


// Generated from src/Exp.g4 by ANTLR 4.9.1



#include "ExpParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExpParser::ExpParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExpParser::~ExpParser() {
  delete _interpreter;
}

std::string ExpParser::getGrammarFileName() const {
  return "Exp.g4";
}

const std::vector<std::string>& ExpParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExpParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

ExpParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExpParser::MainContext* ExpParser::ProgramContext::main() {
  return getRuleContext<ExpParser::MainContext>(0);
}


size_t ExpParser::ProgramContext::getRuleIndex() const {
  return ExpParser::RuleProgram;
}


ExpParser::ProgramContext* ExpParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ExpParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);

            cout << ".source Test.src\n";
            cout << ".class  public Test\n";
            cout << ".super  java/lang/Object\n\n";
            cout << ".method public <init>()V\n";
            cout << "    aload_0\n";
            cout << "    invokenonvirtual java/lang/Object/<init>()V\n";
            cout << "    return\n";
            cout << ".end method\n\n";
        
    setState(33);
    main();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainContext ------------------------------------------------------------------

ExpParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExpParser::StatementContext *> ExpParser::MainContext::statement() {
  return getRuleContexts<ExpParser::StatementContext>();
}

ExpParser::StatementContext* ExpParser::MainContext::statement(size_t i) {
  return getRuleContext<ExpParser::StatementContext>(i);
}


size_t ExpParser::MainContext::getRuleIndex() const {
  return ExpParser::RuleMain;
}


ExpParser::MainContext* ExpParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 2, ExpParser::RuleMain);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);

            cout << ".method public static main([Ljava/lang/String;)V\n\n";
        
    setState(37); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(36);
      statement();
      setState(39); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExpParser::PRINT)
      | (1ULL << ExpParser::IF)
      | (1ULL << ExpParser::WHILE)
      | (1ULL << ExpParser::BREAK)
      | (1ULL << ExpParser::CONTINUE)
      | (1ULL << ExpParser::NAME))) != 0));

            checkUnusedVars();
            cout << " return\n";
            cout << ".limit stack " << stackMax << "\n";
            cout << ".limit locals " << symbol_table.size() << "\n";
            cout << ".end method\n";
            cout << "\n; symbol_table: ";
            for (string& symbol : symbol_table)
                cout << symbol << " ";
            cout << "\n";
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ExpParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExpParser::St_printContext* ExpParser::StatementContext::st_print() {
  return getRuleContext<ExpParser::St_printContext>(0);
}

ExpParser::St_attribContext* ExpParser::StatementContext::st_attrib() {
  return getRuleContext<ExpParser::St_attribContext>(0);
}

ExpParser::St_ifContext* ExpParser::StatementContext::st_if() {
  return getRuleContext<ExpParser::St_ifContext>(0);
}

ExpParser::St_whileContext* ExpParser::StatementContext::st_while() {
  return getRuleContext<ExpParser::St_whileContext>(0);
}

ExpParser::St_breakContext* ExpParser::StatementContext::st_break() {
  return getRuleContext<ExpParser::St_breakContext>(0);
}

ExpParser::St_continueContext* ExpParser::StatementContext::st_continue() {
  return getRuleContext<ExpParser::St_continueContext>(0);
}

ExpParser::Str_array_createContext* ExpParser::StatementContext::str_array_create() {
  return getRuleContext<ExpParser::Str_array_createContext>(0);
}

ExpParser::St_array_pushContext* ExpParser::StatementContext::st_array_push() {
  return getRuleContext<ExpParser::St_array_pushContext>(0);
}

ExpParser::St_array_setContext* ExpParser::StatementContext::st_array_set() {
  return getRuleContext<ExpParser::St_array_setContext>(0);
}


size_t ExpParser::StatementContext::getRuleIndex() const {
  return ExpParser::RuleStatement;
}


ExpParser::StatementContext* ExpParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, ExpParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(52);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(43);
      st_print();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(44);
      st_attrib();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(45);
      st_if();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(46);
      st_while();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(47);
      st_break();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(48);
      st_continue();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(49);
      str_array_create();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(50);
      st_array_push();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(51);
      st_array_set();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- St_printContext ------------------------------------------------------------------

ExpParser::St_printContext::St_printContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExpParser::St_printContext::PRINT() {
  return getToken(ExpParser::PRINT, 0);
}

tree::TerminalNode* ExpParser::St_printContext::OP_PAR() {
  return getToken(ExpParser::OP_PAR, 0);
}

std::vector<ExpParser::ExpressionContext *> ExpParser::St_printContext::expression() {
  return getRuleContexts<ExpParser::ExpressionContext>();
}

ExpParser::ExpressionContext* ExpParser::St_printContext::expression(size_t i) {
  return getRuleContext<ExpParser::ExpressionContext>(i);
}

tree::TerminalNode* ExpParser::St_printContext::CL_PAR() {
  return getToken(ExpParser::CL_PAR, 0);
}

std::vector<tree::TerminalNode *> ExpParser::St_printContext::COMMA() {
  return getTokens(ExpParser::COMMA);
}

tree::TerminalNode* ExpParser::St_printContext::COMMA(size_t i) {
  return getToken(ExpParser::COMMA, i);
}


size_t ExpParser::St_printContext::getRuleIndex() const {
  return ExpParser::RuleSt_print;
}


ExpParser::St_printContext* ExpParser::st_print() {
  St_printContext *_localctx = _tracker.createInstance<St_printContext>(_ctx, getState());
  enterRule(_localctx, 6, ExpParser::RuleSt_print);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(ExpParser::PRINT);
    setState(55);
    match(ExpParser::OP_PAR);

            calculateStack("getstatic java/lang/System/out Ljava/io/PrintStream;", +1);
        
    setState(57);
    dynamic_cast<St_printContext *>(_localctx)->expressionContext = expression();

            if (dynamic_cast<St_printContext *>(_localctx)->expressionContext->type == 'i') 
                calculateStack("invokevirtual java/io/PrintStream/print(I)V", -2);
            else if (dynamic_cast<St_printContext *>(_localctx)->expressionContext->type == 's') 
                calculateStack("invokevirtual java/io/PrintStream/print(Ljava/lang/String;)V", -2);
            else
                cerr << "Error: Line " << _localctx->getStart()->getLine() << " - Type '" << dynamic_cast<St_printContext *>(_localctx)->expressionContext->type << "' is not valid\n";
        
    setState(66);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExpParser::COMMA) {
      setState(59);
      match(ExpParser::COMMA);

              calculateStack("getstatic java/lang/System/out Ljava/io/PrintStream;", +1);
          
      setState(61);
      dynamic_cast<St_printContext *>(_localctx)->expressionContext = expression();

              calculateStack("invokevirtual java/io/PrintStream/print(I)V", -2);
          
      setState(68);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(69);
    match(ExpParser::CL_PAR);

            calculateStack("getstatic java/lang/System/out Ljava/io/PrintStream;", +1);
            calculateStack("invokevirtual java/io/PrintStream/println()V", -1);
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- St_attribContext ------------------------------------------------------------------

ExpParser::St_attribContext::St_attribContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExpParser::St_attribContext::NAME() {
  return getToken(ExpParser::NAME, 0);
}

tree::TerminalNode* ExpParser::St_attribContext::ATTRIB() {
  return getToken(ExpParser::ATTRIB, 0);
}

ExpParser::ExpressionContext* ExpParser::St_attribContext::expression() {
  return getRuleContext<ExpParser::ExpressionContext>(0);
}


size_t ExpParser::St_attribContext::getRuleIndex() const {
  return ExpParser::RuleSt_attrib;
}


ExpParser::St_attribContext* ExpParser::st_attrib() {
  St_attribContext *_localctx = _tracker.createInstance<St_attribContext>(_ctx, getState());
  enterRule(_localctx, 8, ExpParser::RuleSt_attrib);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    dynamic_cast<St_attribContext *>(_localctx)->nameToken = match(ExpParser::NAME);
    setState(73);
    match(ExpParser::ATTRIB);
    setState(74);
    dynamic_cast<St_attribContext *>(_localctx)->ex = expression();

            auto it = find(symbol_table.begin(), symbol_table.end(), (dynamic_cast<St_attribContext *>(_localctx)->nameToken != nullptr ? dynamic_cast<St_attribContext *>(_localctx)->nameToken->getText() : ""));

            if (it == symbol_table.end())
            {
                symbol_table.push_back((dynamic_cast<St_attribContext *>(_localctx)->nameToken != nullptr ? dynamic_cast<St_attribContext *>(_localctx)->nameToken->getText() : ""));
                type_table.push_back(dynamic_cast<St_attribContext *>(_localctx)->ex->type);
                used_vars.push_back(false);
            }

            it = find(symbol_table.begin(), symbol_table.end(), (dynamic_cast<St_attribContext *>(_localctx)->nameToken != nullptr ? dynamic_cast<St_attribContext *>(_localctx)->nameToken->getText() : ""));
            int index = distance(symbol_table.begin(), it);
            used_vars[index] = true;
            char type = type_table[index];

            if (dynamic_cast<St_attribContext *>(_localctx)->ex->type != type) {
                switch (type) {
                    case 's':
                        cerr << "Error: Line " << _localctx->getStart()->getLine() << " - '" << (dynamic_cast<St_attribContext *>(_localctx)->nameToken != nullptr ? dynamic_cast<St_attribContext *>(_localctx)->nameToken->getText() : "") << "' is a string\n";
                        break;
                    case 'i':
                        cerr << "Error: Line " << _localctx->getStart()->getLine() << " - '" << (dynamic_cast<St_attribContext *>(_localctx)->ex != nullptr ? _input->getText(dynamic_cast<St_attribContext *>(_localctx)->ex->start, dynamic_cast<St_attribContext *>(_localctx)->ex->stop) : nullptr) << "' is an " << dynamic_cast<St_attribContext *>(_localctx)->ex->type << "\n";
                        cerr << "Error: Line " << _localctx->getStart()->getLine() << " - '" << (dynamic_cast<St_attribContext *>(_localctx)->nameToken != nullptr ? dynamic_cast<St_attribContext *>(_localctx)->nameToken->getText() : "") << "' is an integer\n";
                        break;
                    case 'a':
                        cerr << "Error: Line " << _localctx->getStart()->getLine() << " - '" << (dynamic_cast<St_attribContext *>(_localctx)->nameToken != nullptr ? dynamic_cast<St_attribContext *>(_localctx)->nameToken->getText() : "") << "' is an array\n";
                        break;
                }
            }
            else {
            
                if (type == 'i')
                    calculateStack("istore " + to_string(index), -1);
                else if (type == 's')
                    calculateStack("astore " + to_string(index), -1);
                else
                    cerr << "Error: Line " << _localctx->getStart()->getLine() << " - Type '" << type << "' is not valid\n"; 
            }
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- St_ifContext ------------------------------------------------------------------

ExpParser::St_ifContext::St_ifContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExpParser::St_ifContext::IF() {
  return getToken(ExpParser::IF, 0);
}

ExpParser::ComparisionContext* ExpParser::St_ifContext::comparision() {
  return getRuleContext<ExpParser::ComparisionContext>(0);
}

std::vector<tree::TerminalNode *> ExpParser::St_ifContext::OP_CUR() {
  return getTokens(ExpParser::OP_CUR);
}

tree::TerminalNode* ExpParser::St_ifContext::OP_CUR(size_t i) {
  return getToken(ExpParser::OP_CUR, i);
}

std::vector<tree::TerminalNode *> ExpParser::St_ifContext::CL_CUR() {
  return getTokens(ExpParser::CL_CUR);
}

tree::TerminalNode* ExpParser::St_ifContext::CL_CUR(size_t i) {
  return getToken(ExpParser::CL_CUR, i);
}

std::vector<ExpParser::StatementContext *> ExpParser::St_ifContext::statement() {
  return getRuleContexts<ExpParser::StatementContext>();
}

ExpParser::StatementContext* ExpParser::St_ifContext::statement(size_t i) {
  return getRuleContext<ExpParser::StatementContext>(i);
}

tree::TerminalNode* ExpParser::St_ifContext::ELSE() {
  return getToken(ExpParser::ELSE, 0);
}


size_t ExpParser::St_ifContext::getRuleIndex() const {
  return ExpParser::RuleSt_if;
}


ExpParser::St_ifContext* ExpParser::st_if() {
  St_ifContext *_localctx = _tracker.createInstance<St_ifContext>(_ctx, getState());
  enterRule(_localctx, 10, ExpParser::RuleSt_if);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(ExpParser::IF);
    setState(78);
    dynamic_cast<St_ifContext *>(_localctx)->comparisionContext = comparision();

            int ifLocal   = ifCounter;
            if (dynamic_cast<St_ifContext *>(_localctx)->comparisionContext->isValid) {
                ifCounter++;

                calculateStack("NOT_IF_" + to_string(ifLocal), -2);
            }
        
    setState(80);
    match(ExpParser::OP_CUR);
    setState(82); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(81);
      statement();
      setState(84); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExpParser::PRINT)
      | (1ULL << ExpParser::IF)
      | (1ULL << ExpParser::WHILE)
      | (1ULL << ExpParser::BREAK)
      | (1ULL << ExpParser::CONTINUE)
      | (1ULL << ExpParser::NAME))) != 0));
    setState(86);
    match(ExpParser::CL_CUR);

            if (dynamic_cast<St_ifContext *>(_localctx)->comparisionContext->isValid) {
                printFormat("goto END_ELSE_" + to_string(ifLocal) + "\n");
                printFormat("NOT_IF_" + to_string(ifLocal) + ":\n");
            }
        
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExpParser::ELSE) {
      setState(88);
      match(ExpParser::ELSE);
      setState(89);
      match(ExpParser::OP_CUR);
      setState(91); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(90);
        statement();
        setState(93); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << ExpParser::PRINT)
        | (1ULL << ExpParser::IF)
        | (1ULL << ExpParser::WHILE)
        | (1ULL << ExpParser::BREAK)
        | (1ULL << ExpParser::CONTINUE)
        | (1ULL << ExpParser::NAME))) != 0));
      setState(95);
      match(ExpParser::CL_CUR);
    }

            if (dynamic_cast<St_ifContext *>(_localctx)->comparisionContext->isValid) 
                printFormat("END_ELSE_" + to_string(ifLocal) + ":\n");
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- St_whileContext ------------------------------------------------------------------

ExpParser::St_whileContext::St_whileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExpParser::St_whileContext::WHILE() {
  return getToken(ExpParser::WHILE, 0);
}

ExpParser::ComparisionContext* ExpParser::St_whileContext::comparision() {
  return getRuleContext<ExpParser::ComparisionContext>(0);
}

tree::TerminalNode* ExpParser::St_whileContext::OP_CUR() {
  return getToken(ExpParser::OP_CUR, 0);
}

tree::TerminalNode* ExpParser::St_whileContext::CL_CUR() {
  return getToken(ExpParser::CL_CUR, 0);
}

std::vector<ExpParser::StatementContext *> ExpParser::St_whileContext::statement() {
  return getRuleContexts<ExpParser::StatementContext>();
}

ExpParser::StatementContext* ExpParser::St_whileContext::statement(size_t i) {
  return getRuleContext<ExpParser::StatementContext>(i);
}


size_t ExpParser::St_whileContext::getRuleIndex() const {
  return ExpParser::RuleSt_while;
}


ExpParser::St_whileContext* ExpParser::st_while() {
  St_whileContext *_localctx = _tracker.createInstance<St_whileContext>(_ctx, getState());
  enterRule(_localctx, 12, ExpParser::RuleSt_while);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(ExpParser::WHILE);

            whileCounter++;
            int whileLocal = whileCounter;
            list_while.push_back(whileCounter);

            printFormat("BEGIN_WHILE_" + to_string(whileLocal) + ":\n");
        
    setState(103);
    dynamic_cast<St_whileContext *>(_localctx)->comparisionContext = comparision();

            if (dynamic_cast<St_whileContext *>(_localctx)->comparisionContext->isValid)
                calculateStack("END_WHILE_" + to_string(whileLocal), -2);
        
    setState(105);
    match(ExpParser::OP_CUR);
    setState(107); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(106);
      statement();
      setState(109); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExpParser::PRINT)
      | (1ULL << ExpParser::IF)
      | (1ULL << ExpParser::WHILE)
      | (1ULL << ExpParser::BREAK)
      | (1ULL << ExpParser::CONTINUE)
      | (1ULL << ExpParser::NAME))) != 0));
    setState(111);
    match(ExpParser::CL_CUR);

            if (dynamic_cast<St_whileContext *>(_localctx)->comparisionContext->isValid){
                printFormat("goto BEGIN_WHILE_" + to_string(whileLocal) + "\n");
                printFormat("END_WHILE_" + to_string(whileLocal) + ":\n");
                list_while.pop_back();
            }
        
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- St_breakContext ------------------------------------------------------------------

ExpParser::St_breakContext::St_breakContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExpParser::St_breakContext::BREAK() {
  return getToken(ExpParser::BREAK, 0);
}


size_t ExpParser::St_breakContext::getRuleIndex() const {
  return ExpParser::RuleSt_break;
}


ExpParser::St_breakContext* ExpParser::st_break() {
  St_breakContext *_localctx = _tracker.createInstance<St_breakContext>(_ctx, getState());
  enterRule(_localctx, 14, ExpParser::RuleSt_break);
